Add demo site for Umami tracking

--- a/demo-site/index.html
+++ b/demo-site/index.html
@@ -10,6 +10,6 @@
   <p>This website is connected to <strong>Umami Analytics</strong> 🎉</p>
 
   <!-- Umami tracking script -->
-  <script async src="https://ahmedumami.click/script.js" data-website-id="YOUR_WEBSITE_ID"></script>
+  <script async src="https://ahmedumami.click/script.js" data-website-id="68a6c547-b3dc-4c17-a875-891972342885"></script>
 </body>
 </html>
