Add demo site for Umami tracking

--- a/index.html
+++ b/index.html
@@ -9,6 +9,5 @@
   <h1>Welcome to My Demo Site</h1>
   <p>This website is connected to <strong>Umami Analytics</strong> 🎉</p>
 
-  <script async src="https://ahmedumami.click/script.js" data-website-id="c98aef9f-05ca-4ae5-ad3d-50a1461a0f21"></script>
-</body>
+<script defer src="https://ahmedumami.click/script.js" data-website-id="c98aef9f-05ca-4ae5-ad3d-50a1461a0f21"></script></body>
 </html>
